# dp-federated-learning

./: .gitignore  README.md  client.py  experiment_configs.py  localdp_adapter.py  opacus_client_dp.py  privacy_accountant.py  pyproject.toml  requirements.txt  run_experiment.py  run_serverless_experiment.py  seed_manager.py  server.py  serverless_experiment_configs.py  serverless_runner.py  utils.py
localdpmod/: differential_privacy.py
